<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:binding="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.dl.playfun.ui.task.address.AddressEditViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.message.applymessage.ApplyMessageFragment">

        <View
            android:id="@+id/status_bar_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/status_bar_color" />

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay"
            app:elevation="0dp">

            <com.dl.playfun.widget.BasicToolbar
                android:id="@+id/basic_toolbar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/action_bar_height"
                app:toolbar_title="@string/address_edit_title" />
        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittext_background"
            android:orientation="vertical"
            android:paddingBottom="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="@drawable/edittext_background"
                android:paddingLeft="14dp"
                android:paddingRight="14dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/address_name"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_middle2" />

                <EditText
                    style="@style/EditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="90dp"
                    android:hint="@string/address_name_hint"
                    android:inputType="text"
                    android:maxLength="8"
                    android:text="@={viewModel.addressEntity.contacts}" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="@drawable/edittext_background"
                android:paddingLeft="14dp"
                android:paddingRight="14dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/address_phone"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_middle2" />

                <EditText
                    style="@style/EditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="90dp"
                    android:hint="@string/address_phone_hint"
                    android:inputType="phone"
                    android:maxLength="10"
                    android:text="@={viewModel.addressEntity.phone}" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="@drawable/edittext_background"
                android:paddingLeft="14dp"
                android:paddingRight="14dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/address_city"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_middle2" />

                <TextView
                    android:id="@+id/city_id"
                    android:layout_width="107dp"
                    android:layout_height="45dp"
                    android:layout_alignParentLeft="true"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="90dp"
                    android:background="@drawable/location_alert_sel_icon"
                    android:drawableRight="@drawable/lication_alert_sel_zk"
                    android:gravity="center"
                    android:hint="@string/playfun_dialog_location_title_sel_hint"
                    android:paddingStart="-23dp"
                    android:paddingRight="7dp"
                    android:text="@={viewModel.CityName.city}"
                    android:textSize="13dp"
                    app:onClickCommand="@{viewModel.clickLocationSelCommand}" />

                <TextView
                    android:id="@+id/city_item_id"
                    android:layout_width="119dp"
                    android:layout_height="45dp"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="9dp"
                    android:layout_toEndOf="@+id/city_id"
                    android:background="@drawable/location_alert_sel_icon"
                    android:drawableRight="@drawable/lication_alert_sel_zk"
                    android:gravity="center"
                    android:hint="@string/address_city_hint2"
                    android:paddingRight="7dp"
                    android:text="@={viewModel.CityItemName.region}"
                    android:textSize="13dp"
                    app:onClickCommand="@{viewModel.clickLocationItemSelCommand}" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:paddingLeft="14dp"
                android:paddingRight="14dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/address_detail"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_middle2" />

                <EditText
                    style="@style/EditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="90dp"
                    android:hint="@string/address_detail_hint"
                    android:inputType="text"
                    android:maxLength="100"
                    android:text="@={viewModel.addressEntity.address}" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:orientation="horizontal"
                android:paddingLeft="14dp"
                android:paddingRight="14dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/address_default"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <Switch
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:thumb="@drawable/switch_thumb"
                    android:track="@drawable/switch_track"
                    android:checked="@={viewModel.isDefault}" />
            </RelativeLayout>

            <Button
                android:id="@+id/btn_confirm"
                style="@style/ButtonPrimary"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="bottom"
                android:layout_marginLeft="42dp"
                android:layout_marginRight="42dp"
                android:layout_marginBottom="50dp"
                android:text="@string/confirm"
                binding:onClickCommand="@{viewModel.subAddress}" />
        </LinearLayout>
    </LinearLayout>
</layout>