<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:binding="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="com.dl.playfun.R" />

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.dl.playfun.ui.task.address.list.AddressItemViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="14dp"
        android:background="@drawable/radius_layout"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.dl.playfun.widget.image.CircleImageView
                android:id="@+id/iv_avatar"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_marginStart="14dp"
                android:layout_marginTop="14dp"
                android:layout_marginBottom="14dp"
                android:scaleType="centerCrop"
                android:src="@drawable/default_address_user"
                app:riv_corner_radius="8dp" />

            <RelativeLayout
                android:id="@+id/right_top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:layout_toEndOf="@+id/iv_avatar">

                <TextView
                    android:id="@+id/user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLength="10"
                    android:singleLine="true"
                    android:text="@{viewModel.itemEntity.contacts}"
                    android:textColor="#ff43435e"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="19dp"
                    android:layout_toEndOf="@id/user_name"
                    android:text="@{viewModel.itemEntity.phone}"
                    android:textColor="#ff9595a6"
                    android:textSize="13sp" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/right_top"
                android:layout_marginStart="20dp"
                android:layout_marginTop="12dp"
                android:layout_toEndOf="@id/iv_avatar"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/city"
                    android:layout_width="wrap_content"
                    android:layout_height="19dp"
                    android:text="@string/address_edit5"
                    android:textColor="#ffff3f3f"
                    android:textSize="13sp"
                    android:visibility="@{viewModel.itemEntity.isDefault.intValue()==1?View.VISIBLE:View.GONE}" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_toEndOf="@+id/city"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:text="@{viewModel.getAddress()}"
                    android:textColor="#ff43435e"
                    android:textSize="13sp" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/iv_avatar"
                android:background="@color/x_line" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:layout_marginTop="14dp"
                android:layout_marginBottom="14dp"
                android:button="@null"
                android:checked="@{viewModel.itemEntity.getChecked()}"
                android:drawableStart="@drawable/checkbox_list_record"
                android:padding="0dp"
                binding:isThrottleFirst="false"
                binding:onClickCommand="@{viewModel.selChecked}" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@id/checkbox"
                android:text="@string/address_edit1"
                android:textColor="#ff9494a5"
                android:textSize="13sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginEnd="24dp"
                android:layout_toStartOf="@+id/edit"
                android:text="@string/address_edit2"
                android:textColor="#ff9494a5"
                android:textSize="13sp"
                binding:onClickCommand="@{viewModel.toSubmit}" />

            <TextView
                android:id="@+id/edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginEnd="24dp"
                android:layout_toStartOf="@+id/del"
                android:text="@string/address_edit3"
                android:textColor="#ff9494a5"
                android:textSize="13sp"
                binding:onClickCommand="@{viewModel.editAddress}" />

            <TextView
                android:id="@+id/del"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:layout_marginEnd="14dp"
                android:text="@string/address_edit4"
                android:textColor="#ff9494a5"
                android:textSize="13sp"
                binding:onClickCommand="@{viewModel.removeddress}" />
        </RelativeLayout>
    </LinearLayout>
</layout>