<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:binding="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.graphics.drawable.GradientDrawable" />
        <variable
            name="viewModel"
            type="com.dl.playfun.ui.login.LoginViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.login.login.LoginFragment">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/login_backdrop_img" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/title_logo"
            android:layout_width="212dp"
            android:layout_height="163dp"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:layout_marginTop="97dp"
            android:src="@drawable/splash_top" />
        <LinearLayout
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_above="@+id/iv_google_login"
            android:layout_marginStart="55dp"
            android:layout_marginEnd="55dp"
            android:layout_marginBottom="19dp"
            android:gravity="center"
            android:orientation="horizontal"
            binding:drawable_color="@{@color/blue_356f}"
            binding:drawable_cornersRadius="@{24}">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:src="@drawable/login_facebook" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/playfun_login_text_facekbook"
                android:textColor="@color/white"
                android:textSize="15dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/iv_google_login"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_above="@+id/ll_hint"
            android:layout_marginStart="55dp"
            android:layout_marginEnd="55dp"
            android:layout_marginBottom="29dp"
            android:gravity="center"
            android:orientation="horizontal"
            binding:drawable_cornersRadius="@{24}"
            binding:drawable_gradient_endColor="@{@color/read_4d30}"
            binding:drawable_gradient_startColor="@{@color/read_652c}"
            binding:drawable_orientation="@{GradientDrawable.Orientation.LEFT_RIGHT}">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:src="@drawable/login_google_bg_min" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/playfun_login_text_google"
                android:textColor="@color/white"
                android:textSize="15dp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/iv_phone_login"
            android:layout_centerInParent="true"
            android:layout_marginBottom="30dp"
            android:gravity="center_horizontal">

            <View
                android:layout_width="40dp"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:background="#E0E0E0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/register_bom_title2"
                android:textColor="@color/gray_light" />

            <View
                android:layout_width="40dp"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:background="#E0E0E0" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_phone_login"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_above="@+id/bottom_layout"
            android:layout_centerInParent="true"
            android:layout_marginBottom="20dp"
            android:background="@drawable/login_in_moblie2"
            binding:onClickCommand="@{viewModel.registerOnClickCommand}" />



        <LinearLayout
            android:id="@+id/bottom_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="34dp"
            android:gravity="center"
            android:orientation="horizontal">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:checked="@={viewModel.agree}"
                android:drawableStart="@drawable/checkbox_button_login"
                android:padding="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/agree"
                android:textColor="@color/toolbar_title_color"
                android:textSize="@dimen/text_size_middle2" />

            <TextView
                android:autoLink="all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/terms_of_service"
                android:textColor="@color/purple_text"
                android:textSize="@dimen/text_size_middle2"
                binding:onClickCommand="@{viewModel.termsOfServiceOnClickCommand}" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/and"
                android:textColor="@color/toolbar_title_color"
                android:textSize="@dimen/text_size_middle2" />

            <TextView
                android:autoLink="all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/privacy_policy"
                android:textColor="@color/purple_text"
                android:textSize="@dimen/text_size_middle2"
                binding:onClickCommand="@{viewModel.usageSpecificationOnClickCommand}" />
        </LinearLayout>
    </RelativeLayout>
</layout>